<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        tools:ignore="ContentDescription"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/background_image_layout_height"
                android:background="@drawable/card_view_form"
                android:id="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="@dimen/no_space"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
                android:layout_width="@dimen/label_width"
                android:layout_height="@dimen/label_height"
                android:background="@drawable/gradient_circle"
                android:scaleType="fitXY"
                android:layout_gravity="end"
                android:src="@drawable/logo_5ka"
                android:elevation="@dimen/cardview_default_elevation"
                android:layout_marginEnd="44dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="140dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"/>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardBackgroundColor"
                app:cardCornerRadius="@dimen/card_view_radius"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:elevation="@dimen/cardview_default_elevation"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/layout_margin_end"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/layout_margin_start"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                app:cardElevation="@dimen/cardview_compat_inset_shadow"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                android:id="@+id/cardView"
                android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/cardName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_name"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/card_name_text_size"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/layout_margin_start"/>
                <TextView

                        android:text="@string/card_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/layout_margin_start"
                        android:id="@+id/cardInfo"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        app:layout_constraintTop_toBottomOf="@+id/cardName"/>
                <ImageView
                        android:id="@+id/background_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_image_layout_height"
                        app:layout_constraintStart_toStartOf="parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cardimage"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginStart="@dimen/layout_margin_start"
                        android:layout_marginEnd="@dimen/layout_margin_end"
                        app:layout_constraintTop_toBottomOf="@+id/cardInfo"/>
                <ImageView
                        android:id="@+id/shtrish_code"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_image_layout_height"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/code"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:layout_marginStart="@dimen/layout_margin_start"
                        android:layout_marginEnd="@dimen/layout_margin_end"
                        app:layout_constraintTop_toBottomOf="@+id/background_image"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/balans_text_view"
                android:text="@string/balans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/titleTextColor"
                android:textSize="@dimen/balans_titel_size"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/layout_margin_start"
                android:layout_marginTop="@dimen/item_layout_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/cardView" android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/balans_card"
                    android:layout_width="@dimen/no_space"
                    android:layout_height="@dimen/no_space"
                    app:cardCornerRadius="@dimen/card_view_radius"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:clickable="true"
                    android:layout_marginTop="@dimen/constrain_layout_margin_top"
                    android:layout_marginBottom="@dimen/constrain_layout_margin_bottom"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/balans_text_view"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toStartOf="@+id/kupons"
                    android:focusable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@drawable/balans_card_view"
                        android:clickable="true"
                        android:focusable="true">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|start"
                            android:layout_marginStart="@dimen/layout_margin_start"
                            android:textColor="@color/whiteColor"
                            android:textSize="@dimen/balans_titel_text_size"
                            android:text="@string/balans"
                            app:layout_constraintStart_toStartOf="parent"
                            android:textStyle="bold"
                            android:id="@+id/textView6"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="@dimen/balans_title_margin_top"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:textColor="@color/whiteColor"
                            android:textSize="@dimen/balans_value_text_size"
                            android:text="@string/default_balans"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="@dimen/layout_margin_start"
                            android:textAlignment="viewStart"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@+id/textView6"/>

                    <ImageView
                            android:layout_width="@dimen/balans_image_layout_width"
                            android:layout_height="@dimen/balans_image_layout_height"
                            android:background="@drawable/balans_cicle"
                            android:scaleType="fitStart"
                            android:layout_gravity="bottom|end"
                            android:src="@drawable/pyaterochka_app"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/kupons"
                    android:layout_width="@dimen/no_space"
                    android:layout_height="@dimen/no_space"
                    app:cardCornerRadius="@dimen/card_view_radius"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="@dimen/layout_margin_end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/layout_margin_bottom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/balans_text_view"
                    app:layout_constraintBottom_toTopOf="@id/textView4"
                    app:layout_constraintStart_toEndOf="@id/balans_card"
                    app:layout_constraintDimensionRatio="1:1"
                    android:clickable="true"
                    android:focusable="true">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/kupon_card_view"
                        android:foreground="?android:attr/selectableItemBackground">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|start"
                            android:textColor="@color/whiteColor"
                            android:textSize="@dimen/balans_titel_text_size"
                            android:text="@string/cupony"
                            android:textStyle="bold"
                            android:id="@+id/textView7"
                            android:layout_marginTop="@dimen/balans_title_margin_top"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="@dimen/layout_margin_start"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start"
                            android:textColor="@color/whiteColor"
                            android:textSize="@dimen/balans_value_text_size"
                            android:text="@string/default_cupon_number"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="@dimen/layout_margin_start"
                            app:layout_constraintTop_toBottomOf="@+id/textView7"/>

                    <ImageView
                            android:layout_width="@dimen/balans_image_layout_width"
                            android:layout_height="@dimen/balans_image_layout_height"
                            android:background="@drawable/balans_cicle"
                            android:scaleType="centerCrop"
                            android:layout_gravity="bottom|end"
                            android:src="@drawable/kupon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/list_of_shops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView3"
                android:textSize="@dimen/list_of_shops_text_size"
                android:layout_marginStart="@dimen/layout_margin_start"
                android:textColor="@color/titleTextColor"
                android:layout_marginTop="@dimen/item_layout_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/balans_card"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:text="@string/view_all"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/kupons"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listItem="@layout/sale"
                app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <TextView
                android:text="@string/default_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:id="@+id/user_name"
                android:textStyle="bold"
                android:textColor="@color/userNameTextColor"
                android:layout_marginTop="@dimen/user_name_layout_margin_top"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_more_horiz_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true"
                android:padding="@dimen/no_space"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="?android:attr/actionBarItemBackground"
                android:layout_marginEnd="20dp"
                android:focusable="true" android:layout_marginTop="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>